Updated indexers format Updated page indexer script

--- a/jupyter-tests/generate indexes.ipynb
+++ b/jupyter-tests/generate indexes.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "a6170d35",
+   "execution_count": null,
+   "id": "7543576d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "c4118688",
+   "execution_count": null,
+   "id": "1cca49ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     "            # create directory page\n",
     "            create_dir_page(f, link_text)\n",
     "            # write link to directory page, and index internal files\n",
-    "            link_url = f\"{{% link {'/'.join(['indexes', f.name])}_index.md %}}\"\n",
+    "            link_url = f\"{{{{ site.baseurl }}}} {{% link {'/'.join(['indexes', f.name])}_index.md %}}\"\n",
     "            output.write(f\"- [{link_text}]({link_url})\\n\")\n",
     "        elif f.is_file():\n",
     "            if f.name[0] == '.':\n",
@@ -36,8 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "7ead28d3",
+   "execution_count": null,
+   "id": "9c2f8889",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "2ca75166",
+   "execution_count": null,
+   "id": "fd31947e",
    "metadata": {},
    "outputs": [],
    "source": [
