Updated indexes Updated page indexer script

--- a/jupyter-tests/page_indexer.ipynb
+++ b/jupyter-tests/page_indexer.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7543576d",
+   "id": "a1e7a745",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1cca49ea",
+   "execution_count": 111,
+   "id": "59eab7e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,20 +24,20 @@
     "            # create directory page\n",
     "            create_dir_page(f, link_text)\n",
     "            # write link to directory page, and index internal files\n",
-    "            link_url = f\"{{{{ site.baseurl }}}} {{% link {'/'.join(['indexes', f.name])}_index.md %}}\"\n",
+    "            link_url = f\"{{{{ site.baseurl }}}}{{% link {'/'.join(['indexes', f.name])}_index.md %}}\"\n",
     "            output.write(f\"- [{link_text}]({link_url})\\n\")\n",
     "        elif f.is_file():\n",
     "            if f.name[0] == '.':\n",
     "                continue\n",
     "            link_text = ' '.join(os.path.splitext(f.name)[0].split(\"_\"))\n",
-    "            link_url = f\"{{% link {'/'.join(os.path.split(f.path))} %}}\"\n",
+    "            link_url = f\"{{{{ site.baseurl }}}}{{% link {'/'.join(os.path.split(f.path))} %}}\"\n",
     "            output.write(f\"- [{link_text}]({link_url})\\n\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c2f8889",
+   "id": "77f54620",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fd31947e",
+   "execution_count": 112,
+   "id": "c6615a1b",
    "metadata": {},
    "outputs": [],
    "source": [
